@@ -36,7 +36,7 @@ struct dwarf2_line_info {
 /* Implements the .file FILENO "FILENAME" directive.  FILENO can be 0
    to indicate that no file number has been assigned.  All real file
    number must be >0.  */
-extern char *dwarf2_directive_file PARAMS ((int dummy));
+extern char *dwarf2_directive_file (int dummy);
 
 /* Implements the .loc FILENO LINENO [COLUMN] directive.  FILENO is
    the file number, LINENO the line number and the (optional) COLUMN
@@ -44,30 +44,29 @@ extern char *dwarf2_directive_file PARAMS ((int dummy));
    corresponds to.  FILENO can be 0 to indicate that the filename
    specified by the textually most recent .file directive should be
    used.  */
-extern void dwarf2_directive_loc PARAMS ((int dummy));
+extern void dwarf2_directive_loc (int dummy);
 
 /* Returns the current source information.  If .file directives have
    been encountered, the info for the corresponding source file is
    returned.  Otherwise, the info for the assembly source file is
    returned.  */
-extern void dwarf2_where PARAMS ((struct dwarf2_line_info *l));
+extern void dwarf2_where (struct dwarf2_line_info *l);
 
 /* This function generates .debug_line info based on the address and
    source information passed in the arguments.  ADDR should be the
    frag-relative offset of the instruction the information is for and
    L is the source information that should be associated with that
    address.  */
-extern void dwarf2_gen_line_info PARAMS ((addressT addr,
-					  struct dwarf2_line_info *l));
+extern void dwarf2_gen_line_info (addressT addr, struct dwarf2_line_info *l);
 
 /* Must be called for each generated instruction.  */
-extern void dwarf2_emit_insn PARAMS ((int));
+extern void dwarf2_emit_insn (int);
 
-extern void dwarf2_finish PARAMS ((void));
+extern void dwarf2_finish (void);
 
-extern int dwarf2dbg_estimate_size_before_relax PARAMS ((fragS *));
-extern int dwarf2dbg_relax_frag PARAMS ((fragS *));
-extern void dwarf2dbg_convert_frag PARAMS ((fragS *));
+extern int dwarf2dbg_estimate_size_before_relax (fragS *);
+extern int dwarf2dbg_relax_frag (fragS *);
+extern void dwarf2dbg_convert_frag (fragS *);
 
 /* An enumeration which describes the sizes of offsets (to DWARF sections)
    and the mechanism by which the size is indicated.  */
